--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criptografia RSA</title>
+    <title>Cara ou Coroa</title>
     <script src="https://kit.fontawesome.com/60fc503006.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='dashboard.css')}}">
 </head>
