--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -17,11 +17,11 @@
                   <th>n° Vitorias</th>
                   <th>n° Jogos</th>
                 </tr>
-                {% for user in users %}
+                {% for user in users.values() %}
                 <tr>
-                  <td>{{(user.username)}}</td>
-                  <td>{{(user.ganhos)}}</td>
-                  <td>{{(user.nrJogos)}}</td>
+                  <td>{{(user['name'])}}</td>
+                  <td>{{(user['vitorias'])}}</td>
+                  <td>{{(user['jogos'])}}</td>
                 </tr>
                 {% endfor %}  
             </table>          
